# chatbot_payroll

./: .gitignore  README.md  guardrails.py  logger.py  observability.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py  main.py.backup
app/core/: chatbot.py  memory.py  rag_engine.py  web_search.py
app/models/: payroll.py  schemas.py
app/services/: formatter.py  llm_service.py  payroll_service.py
app/utils/: config.py  logger.py
app/utils/data/: payroll.csv
scripts/: __init__.py  setup_data.py
tests/: test_basico.py  test_consultas.py  test_guardrails.py  test_integracao.py  test_performance.py
