[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-folha-pagamento"
version = "0.1.0"
description = "Chatbot para consulta de folha de pagamento com RAG"
authors = [
    {name = "Denilza", email = "seu.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8,<3.9.7 || >3.9.7"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "duckduckgo-search>=3.0.0",
    "dateparser>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]

[tool.streamlit]
main_file = "streamlit_app.py"
